<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margem_minima"
    android:layout_marginBottom="@dimen/margem_media">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ranking_tvEscolhaSuaStartUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_grande"
            android:text="@string/ranking_resultados"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/ranking_tvFalha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_grande"
            android:text="@string/main_falha"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <ProgressBar
            android:id="@+id/ranking_pbConectando"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/ranking_btnTentarNovamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_tentarnovamente" />

        <LinearLayout
            android:id="@+id/ranking_llResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ranking_tvProposta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margem_media"
                android:layout_marginBottom="@dimen/margem_grande"
                android:text="@string/startup_proposta"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ranking_rvProposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/layout_item_ranking" />

            <TextView
                android:id="@+id/ranking_tvApresentacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margem_media"
                android:layout_marginBottom="@dimen/margem_grande"
                android:text="@string/startup_apresentacao"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ranking_rvApresentacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/layout_item_ranking" />

            <TextView
                android:id="@+id/ranking_tvDesenvolvimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margem_media"
                android:layout_marginBottom="@dimen/margem_grande"
                android:text="@string/startup_desenvolvimento"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ranking_rvDesenvolvimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/layout_item_ranking" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>